--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,30 @@
 {
-  "extends": ["airbnb"],
-  "plugins": ["prettier"],
+  "extends": [
+    "airbnb"
+  ],
+  "plugins": [
+    "prettier"
+  ],
   "parser": "babel-eslint",
   "rules": {
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".js", ".jsx"]
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
       }
     ],
     "linebreak-style": "off",
-    "react/prefer-stateless-function": [0, { "ignorePureComponents": true }],
-    "react/jsx-one-expression-per-line": "off"
+    "react/prefer-stateless-function": [
+      0,
+      {
+        "ignorePureComponents": true
+      }
+    ],
+    "react/jsx-one-expression-per-line": "off",
+    "import/no-named-as-default": "off"
   },
   "globals": {
     "document": true,
